--- a/games/block-blast.html
+++ b/games/block-blast.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/block-blast.html" />
   <title>Block Blast</title>
   <meta property="og:description"
     content="Block Blast is a game where you have a blast with blocks. Play for Free at CoolUBG" />
